--- a/WebContent/assets/css/main.css
+++ b/WebContent/assets/css/main.css
@@ -69,25 +69,6 @@ a {
 }
 
 
-/* Helpers */
-
-.mt {
-    margin-top: 40px;
-    margin-bottom: 40px;
-}
-
-.form-control {
-    height: 42px;
-    font-size: 18px;
-    width: 280px;
-}
-
-i {
-    margin: 8px;
-    color: #3498db;
-}
-
-
 /* HeaderWrap */
 
 #headerwrap {
@@ -207,11 +188,7 @@ hr {
 .tablebtn {
     color: white;
     height: 30px;
-    padding-top: 0px;
-    ;
-    padding-left: 0px;
-    padding-right: 3px;
-    padding-bottom: 0px;
+    padding: 5px;
     font-size: 6px;
 }
 
@@ -264,6 +241,19 @@ hr {
 }
 
 .detailitem {
-    float: left;
     width: 40%;
+    float: left;
+}
+
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
+}
+
+.detailbtn {
+    margin: 3px;
+    width: 80px;
 }
