--- a/WebContent/assets/css/main.css
+++ b/WebContent/assets/css/main.css
@@ -207,9 +207,9 @@ hr {
 }
 
 .createbtn {
-    height: 50px;
+    height: 45px;
     float: right;
-    margin: 5px;
+    margin: 3px;
 }
 
 .centered {
@@ -256,4 +256,10 @@ hr {
 .detailbtn {
     margin: 3px;
     width: 80px;
+}
+
+.pages {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 200px;
 }
